--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,3 @@
-/**
- * Copyright 2015 Google Inc. All Rights Reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
@@ -213,17 +197,6 @@ _:-ms-input-placeholder, :root .demo-graph {
       -ms-flex-align: center;
           align-items: center;
 }
-dialog::backdrop { /* native */
-  background-color: green;
-}
-
-#loginProgress{
-  display: none;
-}
-
-#loginError{
-  display: none;
-}
 /*Login Section*/
 .login-cover{
   background: #fff;
@@ -245,6 +218,28 @@ dialog {
   border: none;
   box-shadow: 0 0 20px #333;
 }
-.button-right-icon{
-  margin-left: 10px;
+
+dialog::backdrop { /* native */
+  background-color: green;
+}
+
+#loginProgress{
+  display: none;
+}
+
+#loginError{
+  display: none;
+}
+.demo-list-icon {
+  width: 300px;
+}
+.companies-table{
+  margin-top: 20px;
+}
+
+.nav-container{
+  background: #4CAF50;
+}
+.mdl-layout__header .mdl-layout__drawer-button{
+  background-color: #4CAF50;
 }
